@@ -1,34 +1,39 @@
 ' CSUB demo of Barnsley's Fern
-' Author: Sasquatch
+' Author: The "Sasquatch"
 '
 ' Renders ~150X faster than pure MMBasic version
+'
 ' This demo will render continuously until Q)uit
+' Press I key to Zoom in
+' Press O key to Zoom out
+' Press Q key to Quit
 
 #Include "../common/welcome.inc"
 
-Mode 1,8
-
-init_screen()
+Mode 1,8  ' 800 x 600
+'Mode 9,8 ' 1024 x 768
 
 Zoom = 1.0
 Seed% = &hAAAAAAAA
 
-we.clear_keyboard_buffer()
+ScreenSetup
 
+Do While Inkey$<>"" : Loop   'Clear Keyboard buffer
+
+'Main Loop
 Do
  Fern(40000,Zoom,Seed%)
  K$ = LCase$(Inkey$)
  If K$ <> "" Then
-   If K$ = "i" Then Zoom = Zoom * 2 : init_screen()
-   If K$ = "o" Then Zoom = Zoom / 2 : init_screen()
+   If K$ = "i" Then Zoom = Zoom * 2 : ScreenSetup()
+   If K$ = "o" Then Zoom = Zoom / 2 : ScreenSetup()
    If K$ = "q" Then Exit Do
  EndIf
 Loop
 
-we.wait_for_quit()
 we.end_program()
 
-Sub init_screen()
+Sub ScreenSetup()
   Cls
 
   Text 0, 0, "Barnsley's Fern using CSUB", "", 2
@@ -37,7 +42,7 @@ Sub init_screen()
   Text 2, 55, "Press 'Q' to Quit", "", 1
 
   'Draw a white pixel in the cente of the screen
-  Pixel 400,300,RGB(white)
+  'Pixel 400,300,RGB(white)
 End Sub
 
 ' CSUB version of Barnsley's Fern
@@ -49,31 +54,25 @@ End Sub
 ' Caution:  I have found that calling for more than 40,000 iterations -
 '   can interfere with MMBasic background functions such as reading keyboard
 ' Higher Zoom factor will take some time to render
-' File fern.bas written 10-08-2020 13:11:17
-CSUB fern
- 00000000
- 'Fern
- B098B580 60F8AF00 607A60B9 E9D368FB 46132300 68BB627B 2300E9D3 2306E9C7
- 0200F04F E9C74BA6 F04F2310 4BA40200 230EE9C7 681B687B 687B65BB 657B681B
- 681B687B 687B653B 64FB681B 65FB2300 6CFBE0E3 6DBB617B 6D3B613B 6D7B64FB
- 693B653B 697B657B 697A02DB 617B4053 0A1B697B 4053697A 697A617B 405A6DBB
- 0CDB6DBB 65BB4053 4A8E6DBB D3244293 7B10ED97 6B68ED9F 6B06EE27 7B0EED97
- 5B67ED9F 7B05EE27 7B07EE36 7B0CED87 7B10ED97 6B64ED9F 6B06EE27 7B0EED97
- 5B5DED9F 7B05EE27 7B07EE36 6B60ED9F 7B06EE37 7B0AED87 6DBBE067 42934A7A
- 6DBBD928 42934A77 ED97D224 ED9F7B10 EE276B5A ED976B06 ED9F7B0E EE275B59
- EE367B05 ED877B07 ED977B0C ED9F7B10 EE276B56 ED976B06 ED9F7B0E EE275B55
- EE367B05 ED9F7B07 EE376B54 ED877B06 E03A7B0A 4A656DBB D9284293 4A626DBB
- D8244293 7B10ED97 6B4DED9F 6B06EE27 7B0EED97 5B44ED9F 7B05EE27 7B47EE36
- 7B0CED87 7B10ED97 6B47ED9F 6B06EE27 7B0EED97 5B46ED9F 7B05EE27 7B07EE36
- 6B33ED9F 7B06EE37 7B0AED87 F04FE00D F04F0200 E9C70300 ED97230C ED9F7B0E
- EE276B3E ED877B06 E9D77B0A E9C7230C E9D72310 E9C7230A 4B45230E ED97681B
- ED9F7B10 EE276B37 ED976B06 EE267B06 ED9F7B07 EE376B35 EEFD7B06 ED975BC7
- EEB17B0E EE376B04 ED9F7B46 EE276B31 ED976B06 EE267B06 ED9F7B07 EE366B2F
- EEFD7B47 F44F7BC7 EE1742C8 EE151A90 47980A90 33016DFB 6DFA65FB 429A6A7B
- AF17F6FF 687B6DBA BF00601A 46BD3760 BF00BD80 8000F3AF 33333333 3FEB3333
- 47AE147B 3FA47AE1 47AE147B BFA47AE1 9999999A 3FF99999 33333333 BFC33333
- 1EB851EC 3FD1EB85 0A3D70A4 3FD0A3D7 EB851EB8 3FCEB851 C28F5C29 3FDC28F5
- 9999999A 3FC99999 D70A3D71 3FCD70A3 C28F5C29 3FCC28F5 47AE147B 3FC47AE1
- 00000000 40590000 00000000 40790000 00000000 40490000 00000000 4072C000
- 3FF00000 26666666 147AE147 028F5C28 08000338
+' File fern.bas written 12-09-2020 13:37:05
+CSUB Fern
+  00000000
+  4FF0E92D 46924C7E 68244B7E 8000F8D0 681B6822 0F00F1B8 0252EA4F 5000F8DA
+  ED2D681B B0838B10 AB00ED91 F3409201 EE07809E 085B2A90 EB00EEB7 EEB846A9
+  EE07CBE7 46AB3A90 EEB8462F 26009BE7 8B4EEEB0 BB4AED9F 6B4BED9F FB4CED9F
+  BB0BEE2A AB06EE2A DB4BED9F ED9FE033 ED9F5B4C ED9F4B4D EE2E6B4E EE2E5B05
+  EEA87B04 EEA85B04 EEB07B06 EEB06B4C EEAB8B45 ED9F6B05 EE37EB48 EEFDEB0E
+  EE177BC6 EEB10A90 4B576B04 7B49EEB0 681B3601 42C8F44F 6B4EEE36 EEA6464D
+  EEFD7B0A EE177BC7 47981A90 D04F45B0 46BB46D9 F3C64627 B913030A 681B4B4B
+  EA854798 4B4A25C5 44D7EA85 EA84407C 429C2415 4B47D2BB 44234A47 D81C4293
+  6B4CEEB0 5B2EED9F 4B2FED9F 7B30ED9F 5B05EE2E 7B07EE2E 5B04EEA8 7B0DEEA8
+  EB2DED9F 6B05EEAB 8B45EEB0 EB0EEE37 6BC6EEFD 0A90EE16 4B38E7B5 44234A38
+  D80C4293 5B4EEE2D 6B25ED9F 7B26ED9F 5B06EEA8 7B07EE2E 6B25ED9F ED9FE793
+  EEB07B26 98018B4F EB07EE2E 462CE79B 4000F8CA ECBDB003 E8BD8B10 BF008FF0
+  00000000 40590000 00000000 40490000 00000000 00000000 0A3D70A4 3FD0A3D7
+  47AE147B 3FA47AE1 33333333 3FEB3333 47AE147B BFA47AE1 9999999A 3FF99999
+  1EB851EC 3FD1EB85 33333333 BFC33333 EB851EB8 3FCEB851 C28F5C29 3FDC28F5
+  9999999A 3FC99999 C28F5C29 3FCC28F5 D70A3D71 3FCD70A3 47AE147B 3FC47AE1
+  080002EC 080002F0 08000338 0800033C 26666666 EB851EB8 11EB851D FD70A3D7
+  11EB851E
 End CSUB
